--- a/templates/default/rt/rtcategoryselection.html
+++ b/templates/default/rt/rtcategoryselection.html
@@ -2,7 +2,7 @@
     {$id = "categories"}
 {/if}
 
-{if count($categories) > intval(ConfigHelper::getConfig('rt.category_selection_checkbox_limit', 0, true))}
+{if $categories|size > intval(ConfigHelper::getConfig('rt.category_selection_checkbox_limit', 0, true))}
     <select id="{$id}" name="{$name_prefix}[]" multiple {tip class="lms-ui-advanced-select" trigger=$id}
         {if isset($form)} form="{$form}"{/if}>
         {foreach $categories as $category}
