bugfix: missed change of html template

--- a/templates/default/rt/rtmessageview.html
+++ b/templates/default/rt/rtmessageview.html
@@ -178,7 +178,7 @@
 
 		</TD>
 		<TD class="nobr bold">
-			{trans("Remove date:")}
+			{trans("Remove date")}
 		</TD>
 		<TD>
 			{$message.deltime|date_format:"Y-m-d H:i:s"}
