bugfix: fixed warnings and fatal errors on PHP >= 8.0

--- a/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
+++ b/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="modal-body">
 				<form method="post" action="?m=helpdesk" name="helpdesk" enctype="multipart/form-data">
-					{if count($queues) == 1}
+					{if $queues|size == 1}
 						<input type="hidden" name="helpdesk[queue]" value="{$queues[0].id}">
 					{else}
 					<div class="form-group">
