--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -129,13 +129,28 @@
 				<table>
 					<tr>
 						<td>
+							<label for="customerdata[extid]" class="nobr bold">
+								{trans("External system identifier")}
+							</label>
+						</td>
+						<td>
 							<div class="valign-middle">
-								<label for="customerdata[extid]">
-									<strong>{trans("External system identifier")}</strong>
-									<input type="text" maxlength="20" name="customerdata[extid]" value="{$customerinfo.extid|escape}"
-										{tip trigger="extid"}>
-								</label>
+								<input type="text" class="lms-ui-autogrow" name="customerdata[extid]" value="{$customerinfo.extid|escape}"
+									{tip trigger="extid"}>
 								{hint content="Enter customer identifier in external system (optional)"}
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+								<label class="bold" for="customerdata[altname]">
+									{trans("Alternative name")}
+								</label>
+						</td>
+						<td>
+							<div class="valign-middle">
+								<input type="text" class="lms-ui-autogrow" name="customerdata[altname]" maxlength="128" value="{$customerinfo.altname|escape}"}>
+									{hint content="Customer Alternative name (brand, shortname, casual name)"}
 							</div>
 						</td>
 					</tr>
