--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -55,7 +55,9 @@
 					<div class="bold">
 						{icon name="customer" class="{if $customerpanel} lms-ui-sortable-handle{/if}"}
 						{if $customerpanel}{trans("Owner:")}{/if}
-						{$customerinfo.customername|escape} ({$customerinfo.id|string_format:"%04d"}{if $customerinfo.extid} / {$customerinfo.extid|escape}{/if})
+						{$customerinfo.customername|escape}
+						{if $customerinfo.altname}[{$customerinfo.altname|escape}]{/if}
+						({$customerinfo.id|string_format:"%04d"} {if $customerinfo.extid} / {$customerinfo.extid|escape}{/if})
 						{if $customerinfo.deleted} <span class="lms-ui-alert">({trans("deleted customer")})</span>{/if}
 					</div>
 					<div>
