improvement: modernized new helpdesk note form (fixed note body autofocus)

--- a/templates/default/rt/rtnoteadd.html
+++ b/templates/default/rt/rtnoteadd.html
@@ -281,7 +281,7 @@
 <SCRIPT>
 
 	$(function() {
-		$('form[name="note"] [name="note[body]"]').focus();
+		$('[name="note[body]"]').focus();
 
 		$('[name="note[category_change]"]').change(function() {
 			if (parseInt($(this).val())) {
