--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -90,13 +90,13 @@
 					</colgroup>
 					<tr>
 						<td>
-							<label for="lastname" class="nobr">
+							<label for="customeradd[lastname]" class="nobr">
 								<strong>{trans("Name/Surname")}</strong>
 							</label>
 						</td>
 						<td>
 							<div class="valign-middle">
-								<input type="text" id="lastname" name="customeradd[lastname]" maxlength="128"
+								<input type="text" name="customeradd[lastname]" maxlength="128"
 									value="{$customeradd.lastname|escape}" required
 									{tip class="lms-ui-autogrow" trigger="lastname" bold=1}>
 								{hint content="Enter customer last name or company name"}
@@ -105,13 +105,13 @@
 					</tr>
 					<tr>
 						<td>
-							<label for="name" class="nobr">
+							<label for="customeradd[name]" class="nobr">
 								<strong>{trans("First name")}</strong>
 							</label>
 						</td>
 						<td>
 							<div class="valign-middle">
-								<input type="text" id="name" name="customeradd[name]" maxlength="128" value="{$customeradd.name|escape}"
+								<input type="text" name="customeradd[name]" maxlength="128" value="{$customeradd.name|escape}"
 									{tip class="lms-ui-autogrow" trigger="name" bold=1}>
 								{hint content="Enter customer name"}
 							</div>
