--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -123,28 +123,24 @@
 				<table>
 					<tr>
 						<td>
-							<label for="extid" class="nobr bold">
-								{trans("External system identifier")}
-							</label>
-						</td>
-						<td>
 							<div class="valign-middle">
-								<input type="text" id="extid" class="lms-ui-autogrow" name="customeradd[extid]" value="{$customeradd.extid|escape}"
-									{tip trigger="extid"}>
+								<label>
+									<strong>{trans("External system identifier")}</strong>
+									<input type="text" size="20" maxlength="20" name="customeradd[extid]" value="{$customeradd.extid|escape}"
+										{tip trigger="extid"}>
+								</label>
 								{hint content="Enter customer identifier in external system (optional)"}
 							</div>
 						</td>
 					</tr>
 					<tr>
 						<td>
-								<label class="bold nobr" for="altname">
-									{trans("Alternative name")}
-								</label>
-						</td>
-						<td>
 							<div class="valign-middle">
-								<input type="text" id="altname" class="lms-ui-autogrow" name="customeradd[altname]" maxlength="128" value="{$customeradd.altname|escape}"}>
-									{hint content="Customer Alternative name (brand, shortname, casual name)"}
+								<label>
+									{trans("Alternative name")}
+									<input type="text" class="lms-ui-autogrow" name="customeradd[altname]" maxlength="128" value="{$customeradd.altname|escape}"}>
+								</label>
+								{hint content="Customer Alternative name (brand, shortname, casual name)"}
 							</div>
 						</td>
 					</tr>
