bugfix: show again altname label in customeredit (greets for chilek ;-)

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -144,7 +144,7 @@
 					<tr>
 						<td>
 							<label for="altname">
-								<strong?{trans("Alternative name")}</strong>
+								<strong>{trans("Alternative name")}</strong>
 							</label>
 						</td>
 						<td>
