enhancement: allow to notify by sms/email about expired and near expiration SSL domain certificates fix

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -68,6 +68,15 @@
   }
 }
 
+.lms-ui-icon-ssl {
+  .fa-icon;
+  .fab;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-expeditedssl;
+  }
+}
+
 .lms-ui-icon-tariff-limit {
   .fa-icon;
   .fas;
